--- a/config/sites/default/views.view.search.yml
+++ b/config/sites/default/views.view.search.yml
@@ -149,11 +149,11 @@ display:
           exposed: true
           expose:
             operator_id: search_api_fulltext_op
-            label: Search
+            label: ''
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: search_api_fulltext
+            identifier: search
             required: false
             remember: false
             multiple: false
