--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -8,9 +8,12 @@ dependencies:
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_region_ref
+    - field.field.node.location.field_services_ref
     - node.type.location
+    - workflows.workflow.default
   module:
     - address
+    - content_moderation
     - office_hours
     - path
     - telephone
@@ -59,6 +62,21 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_services_ref:
+    weight: 101
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 5
