--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_region_ref
+    - field.field.node.location.field_services_ref
     - node.type.location
   module:
     - address
@@ -76,6 +77,14 @@ content:
     region: content
   field_location_region_ref:
     weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_services_ref:
+    weight: 109
     label: above
     settings:
       link: true
