--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -14,6 +14,7 @@ module:
   config_split: 0
   content_moderation: 0
   contextual: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -38,6 +39,7 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  redirect: 0
   search_api: 0
   search_api_solr: 0
   shortcut: 0
@@ -56,6 +58,7 @@ module:
   workbench_tabs: 0
   workflows: 0
   menu_link_content: 1
+  pathauto: 1
   views: 10
   paragraphs: 11
   config_installer: 1000
