--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -35,5 +35,6 @@ hidden:
   field_location_hours: true
   field_location_phone_number: true
   field_location_region_ref: true
+  field_services_ref: true
   links: true
   search_api_excerpt: true
