--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -17,6 +17,11 @@ dependencies:
     - field.field.node.profile.field_profile_referral
     - field.field.node.profile.field_profile_status
     - field.field.node.profile.field_program_ref
+    - field.field.node.profile.field_provider_npi
+    - field.field.node.profile.field_rating_comment_count
+    - field.field.node.profile.field_rating_comments_ref
+    - field.field.node.profile.field_rating_count
+    - field.field.node.profile.field_rating_overall
     - image.style.medium
     - node.type.profile
   module:
@@ -138,6 +143,53 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_provider_npi:
+    weight: 16
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_rating_comment_count:
+    weight: 18
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_rating_comments_ref:
+    type: entity_reference_revisions_entity_view
+    weight: 15
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_rating_count:
+    weight: 17
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
+  field_rating_overall:
+    weight: 19
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
     region: content
   links:
     weight: 14
