--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "drupal/emulsify": "^3.1",
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/migrate_plus": "^4.2",
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
