--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -145,13 +145,12 @@ content:
     type: entity_reference_label
     region: content
   field_provider_npi:
-    weight: 16
+    weight: 20
     label: above
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      link_to_entity: false
     third_party_settings: {  }
-    type: number_integer
+    type: string
     region: content
   field_rating_comment_count:
     weight: 18
