--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
+        "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
