--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -4,15 +4,25 @@ status: true
 dependencies:
   config:
     - field.field.node.location.field_body
+    - field.field.node.location.field_location_accepting_ref
     - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_components
+    - field.field.node.location.field_location_fax
+    - field.field.node.location.field_location_find_us
     - field.field.node.location.field_location_hours
+    - field.field.node.location.field_location_id
+    - field.field.node.location.field_location_image
+    - field.field.node.location.field_location_insurance
+    - field.field.node.location.field_location_omw
     - field.field.node.location.field_location_phone_number
-    - field.field.node.location.field_location_region_ref
+    - field.field.node.location.field_location_type
     - field.field.node.location.field_services_ref
     - node.type.location
   module:
     - address
+    - entity_reference_revisions
     - office_hours
+    - options
     - telephone
     - text
     - user
@@ -33,12 +43,45 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
+  field_location_accepting_ref:
+    weight: 114
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_location_address:
     weight: 107
     label: above
     settings: {  }
     third_party_settings: {  }
     type: address_default
+    region: content
+  field_location_components:
+    type: entity_reference_revisions_entity_view
+    weight: 110
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
+  field_location_fax:
+    weight: 116
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
+  field_location_find_us:
+    type: entity_reference_revisions_entity_view
+    weight: 117
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
     region: content
   field_location_hours:
     weight: 108
@@ -67,6 +110,37 @@ content:
     third_party_settings: {  }
     type: office_hours
     region: content
+  field_location_id:
+    weight: 113
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_location_image:
+    type: entity_reference_entity_view
+    weight: 111
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    region: content
+  field_location_insurance:
+    weight: 118
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_location_omw:
+    weight: 119
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_location_phone_number:
     weight: 103
     label: above
@@ -75,8 +149,8 @@ content:
     third_party_settings: {  }
     type: telephone_link
     region: content
-  field_location_region_ref:
-    weight: 106
+  field_location_type:
+    weight: 112
     label: above
     settings:
       link: true
