--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -5,10 +5,18 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.location.field_body
+    - field.field.node.location.field_location_accepting_ref
     - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_components
+    - field.field.node.location.field_location_fax
+    - field.field.node.location.field_location_find_us
     - field.field.node.location.field_location_hours
+    - field.field.node.location.field_location_id
+    - field.field.node.location.field_location_image
+    - field.field.node.location.field_location_insurance
     - field.field.node.location.field_location_phone_number
-    - field.field.node.location.field_location_region_ref
+    - field.field.node.location.field_location_type
+    - field.field.node.location.field_services_ref
     - node.type.location
   module:
     - address
@@ -32,8 +40,16 @@ content:
     third_party_settings: {  }
 hidden:
   field_body: true
+  field_location_accepting_ref: true
+  field_location_components: true
+  field_location_fax: true
+  field_location_find_us: true
   field_location_hours: true
+  field_location_id: true
+  field_location_image: true
+  field_location_insurance: true
   field_location_phone_number: true
-  field_location_region_ref: true
+  field_location_type: true
+  field_services_ref: true
   links: true
   search_api_excerpt: true
