--- a/config/sites/default/field.field.node.location.field_body.yml
+++ b/config/sites/default/field.field.node.location.field_body.yml
@@ -11,11 +11,13 @@ id: node.location.field_body
 field_name: field_body
 entity_type: node
 bundle: location
-label: Body
+label: Description
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    value: null
 default_value_callback: ''
 settings: {  }
 field_type: text_long
