--- a/config/sites/default/field.field.node.location.field_location_address.yml
+++ b/config/sites/default/field.field.node.location.field_location_address.yml
@@ -12,7 +12,7 @@ field_name: field_location_address
 entity_type: node
 bundle: location
 label: Address
-description: ''
+description: 'The location''s address.'
 required: false
 translatable: false
 default_value:
