--- a/config/sites/default/field.field.node.location.field_location_find_us.yml
+++ b/config/sites/default/field.field.node.location.field_location_find_us.yml
@@ -12,7 +12,7 @@ field_name: field_location_find_us
 entity_type: node
 bundle: location
 label: 'How to find us'
-description: 'Optionally add information on how to find this location. What door should a patient go to? Where should they park? Is there another image that will help provide further context about the location?'
+description: 'Optionally add information on how to find this location. What door should a user go to? Where should they park? Is there another image that will help provide further context about the location?'
 required: false
 translatable: false
 default_value: {  }
