--- a/config/sites/default/field.field.node.location.field_services_ref.yml
+++ b/config/sites/default/field.field.node.location.field_services_ref.yml
@@ -11,7 +11,7 @@ field_name: field_services_ref
 entity_type: node
 bundle: location
 label: 'Available Services'
-description: 'What services are available at this location? Use the autocomplete field below to select from a list of existing services. If a service is not in the list, <a href="/node/add/service" title="Create a new service page">create it first</a>.'
+description: 'What services are available at this location? Use the autocomplete field above to select from a list of existing services. If a service is not in the list, <a href="/node/add/service" title="Create a new service page">create it first</a>.'
 required: false
 translatable: true
 default_value: {  }
