--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/migrate_plus": "^4.2",
+        "drupal/migrate_tools": "^4.3",
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
