--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -35,7 +35,9 @@ module:
   media_library: 0
   menu_ui: 0
   migrate: 0
+  migrate_json_example: 0
   migrate_plus: 0
+  migrate_tools: 0
   node: 0
   office_hours: 0
   options: 0
