--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -14,12 +14,14 @@ dependencies:
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
     - field.field.node.location.field_location_insurance
+    - field.field.node.location.field_location_omw
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_type
     - field.field.node.location.field_services_ref
     - node.type.location
   module:
     - address
+    - telephone
     - user
 id: node.location.teaser
 targetEntityType: node
@@ -33,23 +35,53 @@ content:
     third_party_settings: {  }
   field_location_address:
     type: address_default
-    weight: 1
+    weight: 3
     region: content
     label: hidden
     settings: {  }
+    third_party_settings: {  }
+  field_location_fax:
+    type: telephone_link
+    weight: 5
+    region: content
+    label: inline
+    settings:
+      title: ''
+    third_party_settings: {  }
+  field_location_image:
+    type: entity_reference_entity_view
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+  field_location_phone_number:
+    type: telephone_link
+    weight: 4
+    region: content
+    label: inline
+    settings:
+      title: ''
+    third_party_settings: {  }
+  field_location_type:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: true
     third_party_settings: {  }
 hidden:
   field_body: true
   field_location_accepting_ref: true
   field_location_components: true
-  field_location_fax: true
   field_location_find_us: true
   field_location_hours: true
   field_location_id: true
-  field_location_image: true
   field_location_insurance: true
-  field_location_phone_number: true
-  field_location_type: true
+  field_location_omw: true
   field_services_ref: true
   links: true
   search_api_excerpt: true
