--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -84,4 +84,9 @@ hidden:
   field_profile_referral: true
   field_profile_status: true
   field_program_ref: true
+  field_provider_npi: true
+  field_rating_comment_count: true
+  field_rating_comments_ref: true
+  field_rating_count: true
+  field_rating_overall: true
   search_api_excerpt: true
