--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.location.field_body
     - field.field.node.location.field_location_accepting_ref
     - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_body
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -74,8 +74,8 @@ content:
       link: true
     third_party_settings: {  }
 hidden:
-  field_body: true
   field_location_accepting_ref: true
+  field_location_body: true
   field_location_components: true
   field_location_find_us: true
   field_location_hours: true
