--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.location.field_body
     - field.field.node.location.field_location_accepting_ref
     - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_body
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -33,7 +33,6 @@ third_party_settings:
       children:
         - group_description
         - group_on_my_way
-        - group_main_section
         - group_service_content
         - group_flexible_components
         - group_how_t
@@ -123,6 +122,7 @@ third_party_settings:
         - field_location_type
         - field_location_image
         - field_body
+        - field_location_body
       parent_name: group_vertical_tabs
       weight: 3
       format_type: tab
@@ -153,18 +153,10 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
-    weight: 14
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_location_accepting_ref:
     weight: 8
     settings:
@@ -184,6 +176,14 @@ content:
       show_description: false
     third_party_settings: {  }
     type: readonly_field_widget
+    region: content
+  field_location_body:
+    weight: 15
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
     region: content
   field_location_components:
     type: entity_reference_paragraphs
@@ -330,7 +330,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
