--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.search_index
-    - field.field.node.location.field_body
     - field.field.node.location.field_location_accepting_ref
     - field.field.node.location.field_location_address
+    - field.field.node.location.field_location_body
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -31,13 +31,6 @@ targetEntityType: node
 bundle: location
 mode: search_index
 content:
-  field_body:
-    weight: 5
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_location_address:
     weight: 0
     label: hidden
@@ -45,6 +38,13 @@ content:
     third_party_settings: {  }
     type: address_default
     region: content
+  field_location_body:
+    type: text_default
+    weight: 4
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_location_components:
     type: entity_reference_revisions_entity_view
     weight: 7
@@ -72,7 +72,7 @@ content:
     third_party_settings: {  }
     region: content
   field_location_hours:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       day_format: long
