--- a/config/sites/default/field.storage.node.field_area_interest_ref.yml
+++ b/config/sites/default/field.storage.node.field_area_interest_ref.yml
@@ -1,15 +1,16 @@
-uuid: d46819e2-c2fd-42e6-9930-9f5d12d4f483
+uuid: d45abb3f-c091-4b99-98aa-ef75f0eb7d06
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: node.field_program_ref
-field_name: field_program_ref
+    - taxonomy
+id: node.field_area_interest_ref
+field_name: field_area_interest_ref
 entity_type: node
 type: entity_reference
 settings:
-  target_type: node
+  target_type: taxonomy_term
 module: core
 locked: false
 cardinality: -1
