--- a/config/sites/default/auto_entitylabel.settings.node.profile.yml
+++ b/config/sites/default/auto_entitylabel.settings.node.profile.yml
@@ -1,5 +1,5 @@
-status: '0'
-pattern: '[node:field_profile_first_name] [node:field_profile_last_name]'
+status: '2'
+pattern: '[node:field_profile_first_name] [node:field_profile_middle_name] [node:field_profile_last_name], [node:field_profile_professional_title]'
 php: 0
 escape: 0
 dependencies:
