--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -3,21 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.profile.field_body
-    - field.field.node.profile.field_email
-    - field.field.node.profile.field_gender
+    - field.field.node.profile.field_affiliations_ref
+    - field.field.node.profile.field_area_interest_ref
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
+    - field.field.node.profile.field_profile_board_certified
+    - field.field.node.profile.field_profile_board_eligible
     - field.field.node.profile.field_profile_education
     - field.field.node.profile.field_profile_first_name
+    - field.field.node.profile.field_profile_gender
     - field.field.node.profile.field_profile_image
+    - field.field.node.profile.field_profile_job_title
+    - field.field.node.profile.field_profile_languages
     - field.field.node.profile.field_profile_last_name
-    - field.field.node.profile.field_profile_patients
-    - field.field.node.profile.field_profile_public_email
-    - field.field.node.profile.field_profile_referral
-    - field.field.node.profile.field_profile_status
-    - field.field.node.profile.field_program_ref
-    - field.field.node.profile.field_provider_npi
+    - field.field.node.profile.field_profile_middle_name
+    - field.field.node.profile.field_profile_npi
+    - field.field.node.profile.field_profile_phone
+    - field.field.node.profile.field_profile_professional_title
+    - field.field.node.profile.field_profile_scheduling
+    - field.field.node.profile.field_profile_type
+    - field.field.node.profile.field_profile_video
     - field.field.node.profile.field_rating_comment_count
     - field.field.node.profile.field_rating_comments_ref
     - field.field.node.profile.field_rating_count
@@ -28,27 +33,32 @@ dependencies:
     - content_moderation
     - field_group
     - media_library
-    - paragraphs
     - path
-    - text
+    - readonly_field_widget
 third_party_settings:
   field_group:
     group_migrated_data:
       children:
-        - field_provider_npi
         - field_profile_first_name
+        - field_profile_middle_name
         - field_profile_last_name
-        - field_gender
-        - field_profile_patients
-        - field_profile_referral
-        - field_profile_status
-        - field_profile_public_email
-        - field_email
+        - field_profile_professional_title
+        - field_profile_job_title
+        - field_profile_npi
+        - field_profile_type
+        - field_profile_gender
+        - field_profile_phone
+        - field_profile_image
         - field_location_ref
         - field_profile_education
+        - field_area_interest_ref
         - field_medical_specialties_ref
+        - field_affiliations_ref
+        - field_profile_board_certified
+        - field_profile_board_eligible
+        - field_profile_scheduling
       parent_name: group_content
-      weight: 7
+      weight: 24
       format_type: tab
       format_settings:
         id: ''
@@ -59,7 +69,8 @@ third_party_settings:
       label: 'Migrated data'
     group_content:
       children:
-        - group_profile_details
+        - group_display
+        - group_video
         - group_migrated_data
         - group_ratings
       parent_name: ''
@@ -70,21 +81,6 @@ third_party_settings:
         classes: ''
         direction: vertical
       label: Content
-    group_profile_details:
-      children:
-        - field_profile_image
-        - field_body
-        - field_program_ref
-      parent_name: group_content
-      weight: 6
-      format_type: tab
-      format_settings:
-        id: ''
-        classes: ''
-        formatter: open
-        description: ''
-        required_fields: true
-      label: 'Profile Details'
     group_ratings:
       children:
         - field_rating_overall
@@ -92,7 +88,7 @@ third_party_settings:
         - field_rating_comment_count
         - field_rating_comments_ref
       parent_name: group_content
-      weight: 8
+      weight: 25
       format_type: tab
       format_settings:
         id: ''
@@ -101,6 +97,32 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Ratings
+    group_video:
+      children:
+        - field_profile_video
+      parent_name: group_content
+      weight: 23
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: Video
+    group_display:
+      children:
+        - title
+      parent_name: group_content
+      weight: 20
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Display Name'
 id: node.profile.default
 targetEntityType: node
 bundle: profile
@@ -112,160 +134,232 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body:
-    weight: 14
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_email:
-    weight: 20
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_gender:
+  field_affiliations_ref:
     weight: 15
     settings:
-      size: 60
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: string_textfield
+    type: readonly_field_widget
+    region: content
+  field_area_interest_ref:
+    weight: 13
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
     region: content
   field_location_ref:
-    weight: 21
+    weight: 11
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: readonly_field_widget
     region: content
   field_medical_specialties_ref:
-    weight: 23
+    weight: 14
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: readonly_field_widget
+    region: content
+  field_profile_board_certified:
+    weight: 16
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_board_eligible:
+    weight: 17
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
     region: content
   field_profile_education:
-    type: entity_reference_paragraphs
-    weight: 22
+    type: readonly_field_widget
+    weight: 12
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: _none
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
     region: content
   field_profile_first_name:
-    weight: 13
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_profile_gender:
+    weight: 8
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
   field_profile_image:
+    type: readonly_field_widget
+    weight: 10
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    region: content
+  field_profile_job_title:
+    weight: 5
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_languages:
+    weight: 31
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_profile_last_name:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_profile_middle_name:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_profile_npi:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_profile_phone:
+    weight: 9
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_professional_title:
+    weight: 4
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_scheduling:
+    weight: 18
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_type:
+    weight: 7
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_profile_video:
     type: media_library_widget
-    weight: 13
+    weight: 6
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
-  field_profile_last_name:
-    weight: 14
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_profile_patients:
-    weight: 16
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_profile_public_email:
-    weight: 19
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_profile_referral:
-    weight: 17
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_profile_status:
-    weight: 18
-    settings:
-      display_label: true
-    third_party_settings: {  }
-    type: boolean_checkbox
-    region: content
-  field_program_ref:
-    weight: 15
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_provider_npi:
-    weight: 30
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_rating_comment_count:
     weight: 28
     settings:
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: number
+    type: readonly_field_widget
     region: content
   field_rating_comments_ref:
-    type: entity_reference_paragraphs
-    weight: 29
+    type: readonly_field_widget
+    weight: 30
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: open
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
     region: content
   field_rating_count:
     weight: 27
     settings:
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: number
+    type: readonly_field_widget
     region: content
   field_rating_overall:
     weight: 26
     settings:
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: number
+    type: readonly_field_widget
     region: content
   moderation_state:
     type: moderation_state_default
@@ -275,7 +369,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -290,7 +384,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
@@ -302,7 +396,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: 21
     region: content
     settings:
       size: 60
@@ -318,8 +412,8 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 11
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden: {  }
