--- a/config/sites/default/field.field.node.profile.field_profile_gender.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_gender.yml
@@ -1,19 +1,21 @@
-uuid: fcafe4de-1a07-49b3-bba0-7225a7e7b737
+uuid: e743d36b-a6f8-4294-b30e-204d459cdb72
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_provider_npi
+    - field.storage.node.field_profile_gender
     - node.type.profile
-id: node.profile.field_provider_npi
-field_name: field_provider_npi
+  module:
+    - options
+id: node.profile.field_profile_gender
+field_name: field_profile_gender
 entity_type: node
 bundle: profile
-label: 'NPI ID'
+label: Gender
 description: ''
 required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: list_string
