--- a/config/sites/default/field.field.node.profile.field_profile_job_title.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_job_title.yml
@@ -1,17 +1,17 @@
-uuid: 47a17cbd-5572-48a3-9f5e-38f7226eebc7
+uuid: fa9ce52d-8b49-446f-8945-cfb16314936e
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_profile_last_name
+    - field.storage.node.field_profile_job_title
     - node.type.profile
-id: node.profile.field_profile_last_name
-field_name: field_profile_last_name
+id: node.profile.field_profile_job_title
+field_name: field_profile_job_title
 entity_type: node
 bundle: profile
-label: 'Last Name'
+label: 'Job Title'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
