--- a/config/sites/default/field.field.node.profile.field_profile_languages.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_languages.yml
@@ -1,17 +1,17 @@
-uuid: 47a17cbd-5572-48a3-9f5e-38f7226eebc7
+uuid: 0b191220-1720-4001-acb2-b5ff57b2a033
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_profile_last_name
+    - field.storage.node.field_profile_languages
     - node.type.profile
-id: node.profile.field_profile_last_name
-field_name: field_profile_last_name
+id: node.profile.field_profile_languages
+field_name: field_profile_languages
 entity_type: node
 bundle: profile
-label: 'Last Name'
+label: Languages
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
