--- a/config/sites/default/field.field.node.profile.field_profile_middle_name.yml
+++ b/config/sites/default/field.field.node.profile.field_profile_middle_name.yml
@@ -1,15 +1,15 @@
-uuid: 4eea9756-e149-4617-a49a-526a7c3c5f7f
+uuid: a048d543-c548-4023-aa8f-08e4ca133015
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_gender
+    - field.storage.node.field_profile_middle_name
     - node.type.profile
-id: node.profile.field_gender
-field_name: field_gender
+id: node.profile.field_profile_middle_name
+field_name: field_profile_middle_name
 entity_type: node
 bundle: profile
-label: Gender
+label: 'Middle Name'
 description: ''
 required: false
 translatable: false
