--- a/config/sites/default/field.storage.node.field_profile_middle_name.yml
+++ b/config/sites/default/field.storage.node.field_profile_middle_name.yml
@@ -1,14 +1,17 @@
-uuid: e34a4e81-d745-4dab-94b0-2142560db64c
+uuid: 75940552-16f3-47e4-a901-11ad31c89be6
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: node.field_profile_patients
-field_name: field_profile_patients
+id: node.field_profile_middle_name
+field_name: field_profile_middle_name
 entity_type: node
-type: boolean
-settings: {  }
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
