--- a/config/sites/default/field.storage.node.field_profile_npi.yml
+++ b/config/sites/default/field.storage.node.field_profile_npi.yml
@@ -1,14 +1,17 @@
-uuid: 492adb21-54b8-4a6e-84b6-ef8993a81c04
+uuid: 24177d53-fa24-48a1-9235-1ab2715bf67a
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: node.field_profile_status
-field_name: field_profile_status
+id: node.field_profile_npi
+field_name: field_profile_npi
 entity_type: node
-type: boolean
-settings: {  }
+type: string
+settings:
+  max_length: 255
+  is_ascii: false
+  case_sensitive: false
 module: core
 locked: false
 cardinality: 1
